--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
@@ -136,12 +135,13 @@
       <id>openshift</id>
       <properties>
       </properties>
-      <activation />
+      <activation/>
       <build>
         <plugins>
           <plugin>
             <groupId>io.fabric8</groupId>
             <artifactId>fabric8-maven-plugin</artifactId>
+            <version>3.5.38</version>
             <executions>
               <execution>
                 <id>fmp</id>
@@ -163,7 +163,15 @@
                   </vertx-health-check>
                 </config>
               </enricher>
-            </configuration>
+            
+          <resources>
+            <labels>
+              <all>
+                <space>Girish_Test</space>
+              </all>
+            </labels>
+          </resources>
+        </configuration>
           </plugin>
         </plugins>
       </build>
@@ -187,7 +195,7 @@
           </plugin>
         </plugins>
       </build>
-      <activation />
+      <activation/>
     </profile>
   </profiles>
 </project>
